Custom environment example
This commit closes #5.

It comments out the keys related to the gateway
build version and the docker registry.

--- a/environment/custom.env
+++ b/environment/custom.env
@@ -8,7 +8,8 @@ WM_GATEWAY_STATE="start"
 WM_SERVICES_HOST="host.extwirepas.com"
 
 # DOCKER
-WM_DOCKER_REGISTRY="myregistry"
+# Uncomment and set the following keys to specify your registry location
+# WM_DOCKER_REGISTRY="myregistry"
 WM_DOCKER_STATUS_DELAY="30"
 
 # Settings
@@ -16,8 +17,9 @@ WM_CFG_SETTINGS_IMAGE=''
 WM_CFG_SETTINGS_VERSION=''
 
 # Wirepas Linux (dbus) Gateway
-WM_LXGW_VERSION=''
-WM_LXGW_IMAGE=''
+# Uncomment and set the following keys to specify your build version
+# WM_LXGW_VERSION=''
+# WM_LXGW_IMAGE=''
 
 # raspi settings
 WM_HOST_SET_HOSTNAME="wirepas-gateway"
