Sink and transport systemd service (#1)
* Sink and transport systemd service

This commit introduces a new gateway type which uses a native installation and systemd to
manage the gateway services.

--- a/environment/default.env
+++ b/environment/default.env
@@ -22,7 +22,7 @@ WM_CFG_SYSTEMD_UPDATER_INTERVAL=${WM_CFG_SYSTEMD_UPDATER_INTERVAL:-86400}
 WM_CFG_HOST_INSTALL_DEPENDENCIES=${WM_CFG_HOST_INSTALL_DEPENDENCIES:-"true"}
 WM_CFG_HOST_UPGRADE=${WM_CFG_HOST_UPGRADE:-"true"}
 
-# Select which gateway to use: lxgw, bdgw
+# Select which gateway to use: lxgw, nlgw, sdgw
 WM_GATEWAY=${WM_GATEWAY:-"lxgw"}
 WM_GATEWAY_STATE=${WM_GATEWAY_STATE:-"start"}
 WM_GATEWAY_CLEANUP=${WM_GATEWAY_CLEANUP:-"false"}
@@ -73,6 +73,33 @@ WM_LXGW_DBUS_CONF_USER=${WM_LXGW_DBUS_CONF_USER:-"root"}
 WM_LXGW_SINK_SERVICE_CMD=${WM_LXGW_SINK_SERVICE_CMD:-"sink"}
 WM_LXGW_TRANSPORT_SERVICE_CMD=${WM_LXGW_TRANSPORT_SERVICE_CMD:-"transport"}
 
+# Linux Gateway - Native installation
+WM_NLGW_NBR_OF_SINKS=${WM_NLGW_NBR_OF_SINKS:-"1"}
+WM_NLGW_SINK_0_UART_PORT=${WM_NLGW_SINK_0_UART_PORT:-"ttyUSB0"}
+WM_NLGW_SINK_1_UART_PORT=${WM_NLGW_SINK_1_UART_PORT:-"ttyUSB1"}
+WM_NLGW_SINK_2_UART_PORT=${WM_NLGW_SINK_2_UART_PORT:-"ttyUSB2"}
+WM_NLGW_SINK_3_UART_PORT=${WM_NLGW_SINK_3_UART_PORT:-"ttyUSB3"}
+WM_NLGW_SINK_4_UART_PORT=${WM_NLGW_SINK_4_UART_PORT:-"ttyUSB4"}
+WM_NLGW_SINK_5_UART_PORT=${WM_NLGW_SINK_5_UART_PORT:-"ttyUSB5"}
+WM_NLGW_SINK_6_UART_PORT=${WM_NLGW_SINK_6_UART_PORT:-"ttyUSB6"}
+WM_NLGW_SINK_7_UART_PORT=${WM_NLGW_SINK_7_UART_PORT:-"ttyUSB7"}
+WM_NLGW_SINK_8_UART_PORT=${WM_NLGW_SINK_8_UART_PORT:-"ttyUSB8"}
+WM_NLGW_SINK_9_UART_PORT=${WM_NLGW_SINK_9_UART_PORT:-"ttyUSB9"}
+WM_NLGW_SINK_0_UART_BITRATE=${WM_NLGW_SINK_0_UART_BITRATE:-"125000"}
+WM_NLGW_SINK_1_UART_BITRATE=${WM_NLGW_SINK_1_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_2_UART_BITRATE=${WM_NLGW_SINK_2_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_3_UART_BITRATE=${WM_NLGW_SINK_3_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_4_UART_BITRATE=${WM_NLGW_SINK_4_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_5_UART_BITRATE=${WM_NLGW_SINK_5_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_6_UART_BITRATE=${WM_NLGW_SINK_6_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_7_UART_BITRATE=${WM_NLGW_SINK_7_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_8_UART_BITRATE=${WM_NLGW_SINK_8_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_9_UART_BITRATE=${WM_NLGW_SINK_9_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
+WM_NLGW_SINK_SERVICE_USER=${WM_NLGW_SINK_SERVICE_USER:-"${USER}"}
+WM_NLGW_SINK_SERVICE_CMD=${WM_NLGW_SINK_SERVICE_CMD:-"/usr/bin/sinkService"}
+WM_NLGW_TRANSPORT_SERVICE_USER=${WM_NLGW_TRANSPORT_SERVICE_USER:-"${USER}"}
+WM_NLGW_TRANSPORT_SERVICE_CMD=${WM_NLGW_TRANSPORT_SERVICE_CMD:-"${HOME}/.local/bin/wm-gw"}
+WM_NLGW_TRANSPORT_SERVICE_SETTINGS=${WM_NLGW_TRANSPORT_SERVICE_SETTINGS:-"${WM_SERVICE_HOME}/settings.yml"}
 
 # Local installation
 WM_SDGW_TAR_PATH=${WM_SDGW_TAR_PATH:-"${WM_ENTRYPOINT_SETTINGS}/wm-gateway.tar.gz"}
@@ -123,7 +150,7 @@ WM_SUPPORT_HOST_NAME=${WM_SUPPORT_HOST_NAME:-"${WM_SERVICES_HOST}"}
 WM_SUPPORT_HOST_KEY=${WM_SUPPORT_HOST_KEY:-"${WM_ENTRYPOINT_SETTINGS}/support.pem"}
 WM_SUPPORT_HOST_KEY_PATH=${WM_SUPPORT_HOST_KEY_PATH:-"${HOME}/.ssh/support.pem"}
 WM_SUPPORT_HOST_PORT=${WM_SUPPORT_HOST_PORT:-''}
-WM_SUPPORT_HOST_USER=${WM_SUPPORT_HOST_USER:-'${USER}'}
+WM_SUPPORT_HOST_USER=${WM_SUPPORT_HOST_USER:-"${USER}"}
 
 
 # Host settings
