Update environment variable defaults (#28)
This change avoids locking down the user by keeping
ssh logins available via password.

--- a/environment/custom.env
+++ b/environment/custom.env
@@ -22,6 +22,6 @@ WM_CFG_SETTINGS_VERSION=''
 # WM_LXGW_IMAGE=''
 
 # raspi settings
-WM_HOST_SET_HOSTNAME="wirepas-gateway"
-WM_HOST_SSH_ENABLE_NETWORK_LOGIN="false"
+WM_HOST_SET_HOSTNAME="my-gateway"
+WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
 
