--- a/environment/default.env
+++ b/environment/default.env
@@ -71,7 +71,7 @@ WM_PYTHON_API_SERVICES_SELECTION=${WM_PYTHON_API_SERVICES_SELECTION:-"['wnt']"}
 
 # Linux (dbus) Gateway
 WM_LXGW_VERSION=${WM_LXGW_VERSION:-latest}
-WM_LXGW_IMAGE=${WM_LXGW_IMAGE:-${WM_DOCKER_REGISTRY}/gateway-rpi}
+WM_LXGW_IMAGE=${WM_LXGW_IMAGE:-${WM_DOCKER_REGISTRY}/gateway}
 
 WM_LXGW_DBUS_CONF=${WM_LXGW_DBUS_CONF:-"com.wirepas.sink.conf"}
 WM_LXGW_DBUS_CONF_USER=${WM_LXGW_DBUS_CONF_USER:-"root"}
