Add multi sink support (#36)
This commit merges the service launcher within the gateway loop, dropping the need to specify a target device.

Closes #12
Closes #7

--- a/environment/default.env
+++ b/environment/default.env
@@ -33,7 +33,6 @@ WM_GATEWAY=${WM_GATEWAY:-"lxgw"}
 WM_GATEWAY_STATE=${WM_GATEWAY_STATE:-"start"}
 WM_GATEWAY_CLEANUP=${WM_GATEWAY_CLEANUP:-"false"}
 
-
 # AWS
 WM_AWS_ACCOUNT_ID=${WM_AWS_ACCOUNT_ID:-''}
 WM_AWS_REGION=${WM_AWS_REGION:-''}
@@ -45,12 +44,9 @@ WM_AWS_SECRET_ACCESS_KEY=${WM_AWS_SECRET_ACCESS_KEY:-''}
 # DOCKER
 WM_DOCKER_REGISTRY_LOGIN=${WM_DOCKER_REGISTRY_LOGIN:-"false"}
 WM_DOCKER_REGISTRY=${WM_DOCKER_REGISTRY:-'wirepas'}
-
 WM_DOCKER_CLEANUP=${WM_DOCKER_CLEANUP:-"true"}
 WM_DOCKER_FORCE_RECREATE=${WM_DOCKER_FORCE_RECREATE:-"false"}
-
 WM_DOCKER_STATUS_DELAY=${WM_DOCKER_STATUS_DELAY:-"30"}
-
 WM_DOCKER_CONFIGURE_DAEMON=${WM_DOCKER_CONFIGURE_DAEMON:-"false"}
 WM_DOCKER_DAEMON_JSON=${WM_DOCKER_DAEMON_JSON:-''}
 
@@ -78,6 +74,12 @@ WM_LXGW_DBUS_CONF_USER=${WM_LXGW_DBUS_CONF_USER:-"root"}
 
 WM_LXGW_SINK_SERVICE_CMD=${WM_LXGW_SINK_SERVICE_CMD:-"sink"}
 WM_LXGW_TRANSPORT_SERVICE_CMD=${WM_LXGW_TRANSPORT_SERVICE_CMD:-"transport"}
+
+WM_LXGW_SINK_PORT_RULE=${WM_LXGW_SINK_PORT_RULE:-"/dev/ttyACM* /dev/ttyUSB*"}
+WM_LXGW_SINK_BLACKLIST=${WM_LXGW_SINK_BLACKLIST:-}
+WM_LXGW_SINK_BITRATE_CONFIGURATION=${WM_LXGW_SINK_BITRATE_CONFIGURATION:-}
+
+WM_LXGW_TRANSPORT_SERVICE_NETWORK=${WM_LXGW_TRANSPORT_SERVICE_NETWORK:-"network_mode: host"}
 
 # Linux Gateway - Native installation
 WM_NLGW_NBR_OF_SINKS=${WM_NLGW_NBR_OF_SINKS:-"1"}
@@ -128,7 +130,6 @@ WM_SERVICES_HOST=${WM_SERVICES_HOST:-"host.extwirepas.com"}
 WM_SERVICES_MQTT_PORT=${WM_SERVICES_MQTT_PORT:-"8883"}
 WM_SERVICES_MQTT_USER=${WM_SERVICES_MQTT_USER:-"mqttuser"}
 WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD:-"uiaidujfk1897fyeu023849sdh?("};
-
 
 WM_SERVICES_TLS_ENABLED=${WM_SERVICES_TLS_ENABLED:-"True"} # python api
 WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE:-''}
