--- a/templates/docker-compose.lxgw.template
+++ b/templates/docker-compose.lxgw.template
@@ -40,6 +40,7 @@ services:
         privileged: true
         stdin_open: true
         tty: true
+        ${WM_LXGW_TRANSPORT_SERVICE_NETWORK}
 
         restart: always
         environment:
