README syntax change (#44)
This commit changes the README syntax to MD and clarifies certain
aspects of the installation and runtime operation.

--- a/environment/custom.env
+++ b/environment/custom.env
@@ -1,27 +1,32 @@
 # Wirepas Oy
 #
-# Custom settings
+# Custom settings example file
+#
+# Set and uncomment the following keys to change their default value
+#
 
 # Select which gateway to use: lxgw, sdgw
-WM_GATEWAY="lxgw"
-WM_GATEWAY_STATE="start"
-WM_SERVICES_HOST="host.extwirepas.com"
+# WM_GATEWAY="lxgw"
 
-# DOCKER
-# Uncomment and set the following keys to specify your registry location
-# WM_DOCKER_REGISTRY="myregistry"
-WM_DOCKER_STATUS_DELAY="30"
+# MQTT location
+# WM_SERVICES_HOST="host.extwirepas.com"
 
-# Settings
-WM_CFG_SETTINGS_IMAGE=''
-WM_CFG_SETTINGS_VERSION=''
+# MQTT credentials
+# WM_SERVICES_MQTT_PASSWORD=uiaidujfk1897fyeu023849sdh
+
+# MQTT connection - port 1883 (unsecure) must be explicitly allowed
+# WM_SERVICES_MQTT_PORT=1883
+# WM_SERVICES_ALLOW_UNSECURE=True
+
+# The certificate path is relative to the container environment
+# WM_SERVICES_CERTIFICATE_CHAIN=
 
 # Wirepas Linux (dbus) Gateway
-# Uncomment and set the following keys to specify your build version
-# WM_LXGW_VERSION=''
-# WM_LXGW_IMAGE=''
+# Uncomment and set the following keys to specify the gateway build version
+# WM_LXGW_VERSION=v1.2.0
+# WM_LXGW_IMAGE=wirepas/gateway
 
-# raspi settings
-WM_HOST_SET_HOSTNAME="my-gateway"
-WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
+# Raspi settings
+# WM_HOST_SET_HOSTNAME="wm-evk"
+# WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
 
