--- a/environment/default.env
+++ b/environment/default.env
@@ -134,7 +134,7 @@ WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD:-"uiaidujfk1897fyeu023849s
 WM_SERVICES_TLS_ENABLED=${WM_SERVICES_TLS_ENABLED:-"True"} # python api
 WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE:-''}
 
-WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN:-"/etc/extwirepas.pem"}
+WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN:-}
 
 WM_SERVICES_GATEWAY_ID=${WM_SERVICES_GATEWAY_ID:-"$(hostname)"}
 
