--- a/environment/custom.env
+++ b/environment/custom.env
@@ -12,6 +12,7 @@
 # WM_SERVICES_HOST="host.extwirepas.com"
 
 # MQTT credentials
+# WM_SERVICES_MQTT_USER=amqttuser
 # WM_SERVICES_MQTT_PASSWORD=uiaidujfk1897fyeu023849sdh
 
 # MQTT connection - port 1883 (unsecure) must be explicitly allowed
