Framework folder structure and organization
This change tackles several changes in the framework, such as

-   Better naming for environment keys

-   Added docker login instead of aws login

-   Install python packages in virtual environment

-   Merges pack and setup within a single script

-   CHANGES location of files to .local leaving ~/wirepas/wm-config
    with only the essential files (custom.env and lxgw folder)

-   Deprecate sdGW and pyGW (#37)

Closes #49, Closes #48, Closes #43, Closes #41,
Closes #31, Closes #24, Closes #23, Closes #8

Relates to #50

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 deliverable/*
-*/*.tmp 
-build-**.txt 
-build-**.txt 
+*/*.tmp
+build-**.txt
+build-**.txt
 docs/*.eval
-docs/*.gen
+**/*.gen
 docs/*.tmp
 docs/*.back
 
 .pre-commit-config.yaml
 .flake8
 .clang*
+.remark*
 .ci/manifest/*
 dev-requirements.txt
 
