--- a/environment/custom.env
+++ b/environment/custom.env
@@ -1,33 +1,40 @@
-# Wirepas Oy
+# Copyright 2019 Wirepas Ltd
 #
 # Custom settings example file
 #
 # Set and uncomment the following keys to change their default value
 #
+# If you need to use a custom file within the container, please create
+# the folder identified by WM_GW_SERVICES_USER_PATH and drop your
+# files inside it. Within the container, your files will be available
+# under /etc/lxgw/usr
 
-# Select which gateway to use: lxgw, sdgw
-# WM_GATEWAY="lxgw"
 
 # MQTT location
-# WM_SERVICES_HOST="host.extwirepas.com"
+# WM_SERVICES_MQTT_HOSTNAME="host.extwirepas.com"
 
 # MQTT credentials
 # WM_SERVICES_MQTT_USER=amqttuser
 # WM_SERVICES_MQTT_PASSWORD=uiaidujfk1897fyeu023849sdh
 
-# MQTT connection - port 1883 (unsecure) must be explicitly allowed
+# MQTT connection - port 1883 (unsecure) must be explicitly set
 # WM_SERVICES_MQTT_PORT=1883
 # WM_SERVICES_ALLOW_UNSECURE=True
 
-# The certificate path is relative to the container environment
-# WM_SERVICES_CERTIFICATE_CHAIN=
-
 # Wirepas Linux (dbus) Gateway
 # Uncomment and set the following keys to specify the gateway build version
-# WM_LXGW_VERSION=v1.2.0
-# WM_LXGW_IMAGE=wirepas/gateway
+# WM_GW_VERSION=v1.2.0
+# WM_GW_IMAGE=wirepas/gateway
 
 # Raspi settings
-# WM_HOST_SET_HOSTNAME="wm-evk"
+# WM_HOST_HOSTNAME="wm-evk"
 # WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
 
+# If you want to blacklist a set or specific devices,
+# set the following key accordingly
+# WM_GW_SINK_BLACKLIST="/dev/ttyACM*"
+
+# Set it to true in order to enumerate
+# all devices whose name matches WM_GW_SINK_PORT_RULE
+# WM_GW_SINK_ENUMERATION=false
+# WM_GW_SINK_PORT_RULE="/dev/ttyACM* /dev/ttyUSB*"
