--- a/environment/default.env
+++ b/environment/default.env
@@ -1,4 +1,4 @@
-# Wirepas Oy
+# Copyright 2019 Wirepas Ltd
 #
 # Default settings
 #
@@ -13,174 +13,104 @@
 
 # These keys operate on the wm-config
 WM_CFG_UPDATE=${WM_CFG_UPDATE:-"true"}
-WM_CFG_PULL_SETTINGS=${WM_CFG_PULL_SETTINGS:-"false"}
+WM_CFG_FRAMEWORK_UPDATE=${WM_CFG_FRAMEWORK_UPDATE:-"false"}
 
-WM_CFG_STARTUP_DELAY=${WM_CFG_STARTUP_DELAY:-"80"}
-WM_CFG_REBOOT_DELAY=${WM_CFG_REBOOT_DELAY:-"10"}
+WM_CFG_STARTUP_DELAY=${WM_CFG_STARTUP_DELAY:-"0"}
+WM_CFG_REBOOT_DELAY=${WM_CFG_REBOOT_DELAY:-"2"}
 
-# These keys act on the wm-config behaviour
-WM_CFG_SYSTEMD_UPDATER=${WM_CFG_SYSTEMD_UPDATER:-"wirepas-updater"}
-WM_CFG_SYSTEMD_UPDATER_DISABLE=${WM_CFG_SYSTEMD_UPDATER_DISABLE:-"false"}
-WM_CFG_SYSTEMD_UPDATER_ENABLE=${WM_CFG_SYSTEMD_UPDATER_ENABLE:-"true"}
-WM_CFG_SYSTEMD_UPDATER_INTERVAL=${WM_CFG_SYSTEMD_UPDATER_INTERVAL:-86400}
+WM_CFG_PYTHON_VIRTUAL_ENV=${WM_CFG_PYTHON_VIRTUAL_ENV:-"${HOME}/.local/virtualenv/wm-config"}
+WM_CFG_PYTHON_VERSION=${WM_CFG_PYTHON_VERSION:-"python3"}
 
-# These keys act on the host environment
-WM_CFG_HOST_INSTALL_DEPENDENCIES=${WM_CFG_HOST_INSTALL_DEPENDENCIES:-"true"}
-WM_CFG_HOST_UPGRADE=${WM_CFG_HOST_UPGRADE:-"true"}
+# WM_CONFIG framework updates
+WM_CFG_UPDATER_IMAGE=${WM_CFG_UPDATER_IMAGE:-"wirepas/wm-config"}
+WM_CFG_UPDATER_VERSION=${WM_CFG_UPDATER_VERSION:-"latest"}
 
-# Select which gateway to use: lxgw, nlgw, sdgw
-WM_GATEWAY=${WM_GATEWAY:-"lxgw"}
-WM_GATEWAY_STATE=${WM_GATEWAY_STATE:-"start"}
-WM_GATEWAY_CLEANUP=${WM_GATEWAY_CLEANUP:-"false"}
+# Gateway settings
+WM_GW_STATE=${WM_GW_STATE:-"start"}
 
-# AWS
-WM_AWS_ACCOUNT_ID=${WM_AWS_ACCOUNT_ID:-''}
-WM_AWS_REGION=${WM_AWS_REGION:-''}
+WM_GW_VERSION=${WM_GW_VERSION:-"latest"}
+WM_GW_IMAGE=${WM_GW_IMAGE:-"wirepas/gateway"}
 
-WM_AWS_ACCESS_KEY_ID=${WM_AWS_ACCESS_KEY_ID:-''}
-WM_AWS_SECRET_ACCESS_KEY=${WM_AWS_SECRET_ACCESS_KEY:-''}
+WM_GW_CLEANUP=${WM_GW_CLEANUP:-"false"}
 
+WM_GW_DBUS_CONF=${WM_GW_DBUS_CONF:-"com.wirepas.sink.conf"}
+WM_GW_DBUS_CONF_USER=${WM_GW_DBUS_CONF_USER:-"root"}
 
-# DOCKER
-WM_DOCKER_REGISTRY_LOGIN=${WM_DOCKER_REGISTRY_LOGIN:-"false"}
-WM_DOCKER_REGISTRY=${WM_DOCKER_REGISTRY:-'wirepas'}
+# gateway sink service
+WM_GW_SINK_ID=${WM_GW_SINK_ID:-0}
+WM_GW_SINK_UART_PORT=${WM_GW_SINK_UART_PORT:-"/dev/ttyWM"}
+WM_GW_SINK_PORT_RULE=${WM_GW_SINK_PORT_RULE:-"/dev/ttyACM* /dev/ttyUSB*"}
+WM_GW_SINK_BLACKLIST=${WM_GW_SINK_BLACKLIST:-}
+WM_GW_SINK_BITRATE_CONFIGURATION=${WM_GW_SINK_BITRATE_CONFIGURATION:-}
+WM_GW_SINK_ENUMERATION=${WM_GW_SINK_ENUMERATION:-"false"}
+WM_GW_SINK_SERVICE_CMD=${WM_GW_SINK_SERVICE_CMD:-"sink"}
+
+# gateway transport service
+WM_GW_ID=${WM_GW_ID:-"$(hostname)"}
+WM_GW_MODEL=${WM_GW_MODEL:-"wirepas-evk"}
+WM_GW_VERSION=${WM_GW_VERSION:-"${WM_GW_IMAGE}:${WM_GW_VERSION}"}
+WM_GW_IGNORED_ENDPOINTS_FILTER=${WM_GW_IGNORED_ENDPOINTS_FILTER:-}
+WM_GW_WHITENED_ENDPOINTS_FILTER=${WM_GW_WHITENED_ENDPOINTS_FILTER:-}
+WM_GW_TRANSPORT_SERVICE_CMD=${WM_GW_TRANSPORT_SERVICE_CMD:-"transport"}
+WM_GW_TRANSPORT_SERVICE_NETWORK=${WM_GW_TRANSPORT_SERVICE_NETWORK:-"network_mode: host"}
+WM_GW_SERVICES_ENV_FILE=${WM_GW_SERVICES_ENV_FILE:-"${WM_CFG_GATEWAY_PATH}/services.env"}
+WM_GW_SERVICES_USER_PATH=${WM_GW_SERVICES_USER_PATH:-"${WM_CFG_GATEWAY_PATH}/user"}
+
+# Docker daemon settings
+WM_DOCKER_USERNAME=${WM_DOCKER_USERNAME:-""}
+WM_DOCKER_PASSWORD=${WM_DOCKER_PASSWORD:-""}
 WM_DOCKER_CLEANUP=${WM_DOCKER_CLEANUP:-"true"}
 WM_DOCKER_FORCE_RECREATE=${WM_DOCKER_FORCE_RECREATE:-"false"}
 WM_DOCKER_STATUS_DELAY=${WM_DOCKER_STATUS_DELAY:-"30"}
-WM_DOCKER_CONFIGURE_DAEMON=${WM_DOCKER_CONFIGURE_DAEMON:-"false"}
 WM_DOCKER_DAEMON_JSON=${WM_DOCKER_DAEMON_JSON:-''}
 
-
-# Settings
-WM_CFG_SETTINGS_IMAGE=${WM_CFG_SETTINGS_IMAGE:-"${WM_DOCKER_REGISTRY}/gateway-settings-rpi"}
-WM_CFG_SETTINGS_VERSION=${WM_CFG_SETTINGS_VERSION:-"latest"}
-
-
-# Python API
-WM_PYGW_VERSION=${WM_PYGW_VERSION:-2.1.5}
-WM_PYGW_IMAGE=${WM_PYGW_IMAGE:-${WM_DOCKER_REGISTRY}/gateway-rpi}
-
-WM_PYTHON_API_CONFIG_FILE=${WM_PYTHON_API_CONFIG_FILE:-"./inits/mesh.ini"}
-WM_PYTHON_API_PLUGIN_DIR=${WM_PYTHON_API_PLUGIN_DIR:-"['./plugins/wirepas_plugins/']"}
-WM_PYTHON_API_SERVICES_SELECTION=${WM_PYTHON_API_SERVICES_SELECTION:-"['wnt']"}
-
-
-# Linux (dbus) Gateway
-WM_LXGW_VERSION=${WM_LXGW_VERSION:-latest}
-WM_LXGW_IMAGE=${WM_LXGW_IMAGE:-${WM_DOCKER_REGISTRY}/gateway}
-
-WM_LXGW_DBUS_CONF=${WM_LXGW_DBUS_CONF:-"com.wirepas.sink.conf"}
-WM_LXGW_DBUS_CONF_USER=${WM_LXGW_DBUS_CONF_USER:-"root"}
-
-WM_LXGW_SINK_SERVICE_CMD=${WM_LXGW_SINK_SERVICE_CMD:-"sink"}
-WM_LXGW_TRANSPORT_SERVICE_CMD=${WM_LXGW_TRANSPORT_SERVICE_CMD:-"transport"}
-
-WM_LXGW_SINK_PORT_RULE=${WM_LXGW_SINK_PORT_RULE:-"/dev/ttyACM* /dev/ttyUSB*"}
-WM_LXGW_SINK_BLACKLIST=${WM_LXGW_SINK_BLACKLIST:-}
-WM_LXGW_SINK_BITRATE_CONFIGURATION=${WM_LXGW_SINK_BITRATE_CONFIGURATION:-}
-
-WM_LXGW_TRANSPORT_SERVICE_NETWORK=${WM_LXGW_TRANSPORT_SERVICE_NETWORK:-"network_mode: host"}
-
-# Linux Gateway - Native installation
-WM_NLGW_NBR_OF_SINKS=${WM_NLGW_NBR_OF_SINKS:-"1"}
-WM_NLGW_SINK_0_UART_PORT=${WM_NLGW_SINK_0_UART_PORT:-"ttyUSB0"}
-WM_NLGW_SINK_1_UART_PORT=${WM_NLGW_SINK_1_UART_PORT:-"ttyUSB1"}
-WM_NLGW_SINK_2_UART_PORT=${WM_NLGW_SINK_2_UART_PORT:-"ttyUSB2"}
-WM_NLGW_SINK_3_UART_PORT=${WM_NLGW_SINK_3_UART_PORT:-"ttyUSB3"}
-WM_NLGW_SINK_4_UART_PORT=${WM_NLGW_SINK_4_UART_PORT:-"ttyUSB4"}
-WM_NLGW_SINK_5_UART_PORT=${WM_NLGW_SINK_5_UART_PORT:-"ttyUSB5"}
-WM_NLGW_SINK_6_UART_PORT=${WM_NLGW_SINK_6_UART_PORT:-"ttyUSB6"}
-WM_NLGW_SINK_7_UART_PORT=${WM_NLGW_SINK_7_UART_PORT:-"ttyUSB7"}
-WM_NLGW_SINK_8_UART_PORT=${WM_NLGW_SINK_8_UART_PORT:-"ttyUSB8"}
-WM_NLGW_SINK_9_UART_PORT=${WM_NLGW_SINK_9_UART_PORT:-"ttyUSB9"}
-WM_NLGW_SINK_0_UART_BITRATE=${WM_NLGW_SINK_0_UART_BITRATE:-"125000"}
-WM_NLGW_SINK_1_UART_BITRATE=${WM_NLGW_SINK_1_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_2_UART_BITRATE=${WM_NLGW_SINK_2_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_3_UART_BITRATE=${WM_NLGW_SINK_3_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_4_UART_BITRATE=${WM_NLGW_SINK_4_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_5_UART_BITRATE=${WM_NLGW_SINK_5_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_6_UART_BITRATE=${WM_NLGW_SINK_6_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_7_UART_BITRATE=${WM_NLGW_SINK_7_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_8_UART_BITRATE=${WM_NLGW_SINK_8_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_9_UART_BITRATE=${WM_NLGW_SINK_9_UART_BITRATE:-"${WM_NLGW_SINK_0_UART_BITRATE}"}
-WM_NLGW_SINK_SERVICE_USER=${WM_NLGW_SINK_SERVICE_USER:-"${USER}"}
-WM_NLGW_SINK_SERVICE_CMD=${WM_NLGW_SINK_SERVICE_CMD:-"/usr/bin/sinkService"}
-WM_NLGW_TRANSPORT_SERVICE_USER=${WM_NLGW_TRANSPORT_SERVICE_USER:-"${USER}"}
-WM_NLGW_TRANSPORT_SERVICE_CMD=${WM_NLGW_TRANSPORT_SERVICE_CMD:-"${HOME}/.local/bin/wm-gw"}
-WM_NLGW_TRANSPORT_SERVICE_SETTINGS=${WM_NLGW_TRANSPORT_SERVICE_SETTINGS:-"${WM_SERVICE_HOME}/settings.yml"}
-
-# Local installation
-WM_SDGW_TAR_PATH=${WM_SDGW_TAR_PATH:-"${WM_ENTRYPOINT_SETTINGS}/wm-gateway.tar.gz"}
-WM_SDGW_SCRIPT_PATH=${WM_SDGW_SCRIPT_PATH:-"${WM_ENTRYPOINT_SETTINGS}/run.sh"}
-
-
-# UART (sink) settings
-WM_ENABLE_SERIAL_SYMLINKS=${WM_ENABLE_SERIAL_SYMLINKS:-"true"}
-WM_SERIAL_NICKNAME=${WM_SERIAL_NICKNAME:-"ttyWM"}
-
-WM_FORCE_UART_PORT=${WM_FORCE_UART_PORT:-''}
-
-WM_SINK_ID=${WM_SINK_ID:-0}
-WM_SINK_UART_PORT=${WM_FORCE_UART_PORT:-"/dev/${WM_SERIAL_NICKNAME}"}
-WM_SINK_UART_BITRATE=${WM_SINK_UART_BITRATE:-125000}
-
-
 # Backend specific
-WM_SERVICES_HOST=${WM_SERVICES_HOST:-"host.extwirepas.com"}
+WM_SERVICES_MQTT_HOSTNAME=${WM_SERVICES_MQTT_HOSTNAME:-"host.extwirepas.com"}
 WM_SERVICES_MQTT_PORT=${WM_SERVICES_MQTT_PORT:-"8883"}
 WM_SERVICES_MQTT_USER=${WM_SERVICES_MQTT_USER:-"mqttuser"}
 WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD:-"uiaidujfk1897fyeu023849sdh?("};
-
-WM_SERVICES_TLS_ENABLED=${WM_SERVICES_TLS_ENABLED:-"True"} # python api
-WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE:-''}
-
+WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE:-}
 WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN:-}
 
-WM_SERVICES_GATEWAY_ID=${WM_SERVICES_GATEWAY_ID:-"$(hostname)"}
-
-
-WM_SERVICES_GATEWAY_MODEL=${WM_SERVICES_GATEWAY_MODEL:-}
-WM_SERVICES_GATEWAY_VERSION=${WM_SERVICES_GATEWAY_VERSION:-}
-
-WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER:-}
-WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER:-}
-
-
 # WiFi management - set the AP SSID and PASSWORD you want your gw to connect to
-WM_WIFI_DISABLE=${WM_WIFI_DISABLE:-"true"}
+WM_WIFI_ENABLE=${WM_WIFI_ENABLE:-"false"}
 WM_WIFI_AP_SSID=${WM_WIFI_AP_SSID:-''}
 WM_WIFI_AP_PASSWORD=${WM_WIFI_AP_PASSWORD:-''}
 
 # Wirepas support - keys to allow FAEs to connect to your box
-WM_SUPPORT_HOST_NAME=${WM_SUPPORT_HOST_NAME:-"${WM_SERVICES_HOST}"}
-WM_SUPPORT_HOST_KEY=${WM_SUPPORT_HOST_KEY:-"${WM_ENTRYPOINT_SETTINGS}/support.pem"}
+WM_SUPPORT_HOST_NAME=${WM_SUPPORT_HOST_NAME:-"${WM_SERVICES_MQTT_HOSTNAME}"}
+WM_SUPPORT_HOST_USER=${WM_SUPPORT_HOST_USER:-"${USER}"}
+WM_SUPPORT_HOST_KEY=${WM_SUPPORT_HOST_KEY:-"${WM_CFG_SETTINGS_PATH}/support.pem"}
 WM_SUPPORT_HOST_KEY_PATH=${WM_SUPPORT_HOST_KEY_PATH:-"${HOME}/.ssh/support.pem"}
 WM_SUPPORT_HOST_PORT=${WM_SUPPORT_HOST_PORT:-''}
-WM_SUPPORT_HOST_USER=${WM_SUPPORT_HOST_USER:-"${USER}"}
-
 
 # Host settings
-WM_HOST_SET_HOSTNAME=${WM_HOST_SET_HOSTNAME:-"wirepas-evk"}
+WM_HOST_HOSTNAME=${WM_HOST_HOSTNAME:-"wirepas-evk"}
+WM_HOST_TTY_SYMLINK=${WM_HOST_TTY_SYMLINK:-"ttyWM"}
+
+WM_HOST_INSTALL_DEPENDENCIES=${WM_HOST_INSTALL_DEPENDENCIES:-"true"}
+WM_HOST_UPGRADE_PACKAGES=${WM_HOST_UPGRADE_PACKAGES:-"true"}
+
 WM_HOST_SSH_ENABLE_NETWORK_LOGIN=${WM_HOST_SSH_ENABLE_NETWORK_LOGIN:-"true"}
 WM_HOST_IPV6_DISABLE=${WM_HOST_IPV6_DISABLE:-"false"}
+WM_HOST_USER_NAME=${WM_HOST_USER_NAME:-"pi"}
+WM_HOST_USER_PASSWORD=${WM_HOST_USER_PASSWORD:-}
+WM_HOST_USER_PPKI=${WM_HOST_USER_PPKI:-}
 
-WM_HOST_SET_KEYBOARD=${WM_HOST_SET_KEYBOARD:-"false"}
+WM_HOST_KEYBOARD_CONFIGURE=${WM_HOST_KEYBOARD_CONFIGURE:-"false"}
 WM_HOST_KEYBOARD_XKBMODEL=${WM_HOST_KEYBOARD_XKBMODEL:-"pc105"}
 WM_HOST_KEYBOARD_XKBLAYOUT=${WM_HOST_KEYBOARD_XKBLAYOUT:-"gb"}
 WM_HOST_KEYBOARD_XKBVARIANT=${WM_HOST_KEYBOARD_XKBVARIANT:-''}
 WM_HOST_KEYBOARD_XKBOPTIONS=${WM_HOST_KEYBOARD_XKBOPTIONS:-''}
 WM_HOST_KEYBOARD_BACKSPACE=${WM_HOST_KEYBOARD_BACKSPACE:-"guess"}
-
-WM_HOST_USER_NAME=${WM_HOST_USER_NAME:-"pi"}
-WM_HOST_USER_PASSWORD=${WM_HOST_USER_PASSWORD:-}
-WM_HOST_USER_PPKI=${WM_HOST_USER_PPKI:-}
-
-
 WM_HOST_AVAHI_SERVICES=${WM_HOST_AVAHI_SERVICES:-"${WM_CFG_HOST_PATH}/ssh.service"}
+WM_HOST_EXPAND_FILESYSTEM=${WM_HOST_EXPAND_FILESYSTEM:-"true"}
 
-# RPI specific (ARMv7)
-WM_RPI_EXPAND_FILESYSTEM=${WM_RPI_EXPAND_FILESYSTEM:-"true"}
+# Systemd periodic job
+WM_SYSTEMD_UPDATER=${WM_SYSTEMD_UPDATER:-"wirepas-updater"}
+WM_SYSTEMD_UPDATER_DISABLE=${WM_SYSTEMD_UPDATER_DISABLE:-"false"}
+WM_SYSTEMD_UPDATER_ENABLE=${WM_SYSTEMD_UPDATER_ENABLE:-"true"}
+WM_SYSTEMD_UPDATER_INTERVAL=${WM_SYSTEMD_UPDATER_INTERVAL:-15552000}
 
-# SLACK - define a webhook to get updates about your gateway status
-WM_SLACK_WEBHOOK=${WM_SLACK_WEBHOOK:-''}
-WM_MSTEAMS_WEBHOOK=${WM_MSTEAMS_WEBHOOK:-''}
+# Define a webhook where to get updates about your gateway status
+WM_CFG_WEBHOOK_POST_URL=${WM_CFG_WEBHOOK_POST_URL:-}
