--- a/templates/docker-compose.lxgw.template
+++ b/templates/docker-compose.lxgw.template
@@ -1,4 +1,4 @@
-# Wirepas Oy 2018
+# Copyright 2019 Wirepas Ltd 2018
 #
 # DBUS gateway
 #
@@ -8,9 +8,9 @@
 version: '3'
 services:
 
-    wm-dbus-sink:
-        container_name: wm-dbus-sink
-        image: ${WM_LXGW_IMAGE}:${WM_LXGW_VERSION}
+    wm-gw-sink:
+        container_name: wm-gw-sink
+        image: ${WM_GW_IMAGE}:${WM_GW_VERSION}
 
         user: root
         privileged: true
@@ -18,50 +18,39 @@ services:
         tty: true
 
         restart: always
-        environment:
-            - WM_SINK_UART_PORT=${WM_SINK_UART_PORT}
-            - WM_SINK_UART_BITRATE=${WM_SINK_UART_BITRATE}
-            - WM_SINK_ID=${WM_SINK_ID}
+        env_file:
+            - ./services.env
 
         volumes:
             - /dev:/dev
             - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
+            - ${WM_GW_SERVICES_USER_PATH}:/etc/lxgw/usr
 
         logging:
            driver: journald
 
-        command: ${WM_LXGW_SINK_SERVICE_CMD}
+        command: ${WM_GW_SINK_SERVICE_CMD}
 
-    wm-dbus-transport:
-        container_name: wm-dbus-transport
-        image: ${WM_LXGW_IMAGE}:${WM_LXGW_VERSION}
+    wm-gw-transport:
+        container_name: wm-gw-transport
+        image: ${WM_GW_IMAGE}:${WM_GW_VERSION}
 
         user: root
         privileged: true
         stdin_open: true
         tty: true
-        ${WM_LXGW_TRANSPORT_SERVICE_NETWORK}
+        ${WM_GW_TRANSPORT_SERVICE_NETWORK}
 
         restart: always
-        environment:
-            - WM_SERVICES_HOST=${WM_SERVICES_HOST}
-            - WM_SERVICES_MQTT_PORT=${WM_SERVICES_MQTT_PORT}
-            - WM_SERVICES_MQTT_USER=${WM_SERVICES_MQTT_USER}
-            - WM_SERVICES_MQTT_PASSWORD=${WM_SERVICES_MQTT_PASSWORD}
-            - WM_SERVICES_CERTIFICATE_CHAIN=${WM_SERVICES_CERTIFICATE_CHAIN}
-            - WM_SERVICES_GATEWAY_ID=${WM_SERVICES_GATEWAY_ID}
-            - WM_SERVICES_ALLOW_UNSECURE=${WM_SERVICES_ALLOW_UNSECURE}
-            - WM_SERVICES_GATEWAY_MODEL=${WM_SERVICES_GATEWAY_MODEL}
-            - WM_SERVICES_GATEWAY_VERSION=${WM_SERVICES_GATEWAY_VERSION}
-            - WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_IGNORED_ENDPOINTS_FILTER}
-            - WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER=${WM_SERVICES_GATEWAY_WHITENED_ENDPOINTS_FILTER}
-            - PYTHONUNBUFFERED=true
+        env_file:
+            - ${WM_GW_SERVICES_ENV_FILE}
 
         volumes:
             - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
+            - ${WM_GW_SERVICES_USER_PATH}:/etc/lxgw/usr
 
         logging:
             driver: journald
 
-        command: ${WM_LXGW_TRANSPORT_SERVICE_CMD}
+        command: ${WM_GW_TRANSPORT_SERVICE_CMD}
 
