--- a/.tarignore
+++ b/.tarignore
@@ -1,9 +1,25 @@
-
 wmconfig*tar*
-*/.git*
-*/lxgw
-*/build-*.txt
-*/utils*
-*/*tmp
-*/*~
+
 **~
+**/*.tmp
+\build-**.txt
+\build-**.txt
+
+\docs*
+\container*
+\deliverable*
+
+\.pre-commit-config.yaml
+\.flake8
+\.clang*
+\.remark*
+
+\.ci*
+\.git*
+\.renovaterc*
+\._config.yml*
+\.travis*
+\.tarignore*
+\.dockerignore*
+
+\dev-requirements.txt
