Fine tuning of variables, names and function calls
* Use command instead of which
* Remove unecessary variable from bitrate enumeration
* Change .wirepas_session to session.log
* Set default hostname to wm-evk
* Sink enumeration default

--- a/environment/custom.env
+++ b/environment/custom.env
@@ -53,3 +53,8 @@
 # WM_HOST_SUPPORT_MANAGEMENT=true
 # WM_HOST_DOCKER_PRUNE_ALL=true # it will clean ALL unused volumes and images
 
+# Set this to true if you want to use multiple sinks or handle discovery
+# dynamically.
+# The symbolic link /dev/ttyWM is used when set to false. The symbolic
+# link will match the last inserted device on the host.
+# WM_CONFIG_MULTI_SINK="true"
