--- a/environment/default.env
+++ b/environment/default.env
@@ -63,7 +63,6 @@ WM_GW_SERVICES_ENV_FILE=${WM_GW_SERVICES_ENV_FILE:-"${WM_CFG_GATEWAY_PATH}/servi
 WM_GW_SERVICES_USER_PATH=${WM_GW_SERVICES_USER_PATH:-"${WM_CFG_GATEWAY_PATH}/user"}
 WM_GW_DEBUG_LEVEL=${WM_GW_DEBUG_LEVEL:-}
 
-
 # Docker daemon settings
 WM_DOCKER_USERNAME=${WM_DOCKER_USERNAME:-""}
 WM_DOCKER_PASSWORD=${WM_DOCKER_PASSWORD:-""}
@@ -106,13 +105,13 @@ WM_SUPPORT_KEY_PATH=${WM_SUPPORT_KEY_PATH:-"${HOME}/.ssh/support.pem"}
 WM_SUPPORT_PORT=${WM_SUPPORT_PORT:-''}
 
 # Host settings
-WM_HOST_HOSTNAME=${WM_HOST_HOSTNAME:-}
 WM_HOST_TTY_SYMLINK=${WM_HOST_TTY_SYMLINK:-"ttyWM"}
 WM_HOST_TTY_SIMLINK_FILENAME=${WM_HOST_TTY_SIMLINK_FILENAME:-"99-wirepas-serial.rules"}
 
 WM_HOST_INSTALL_DEPENDENCIES=${WM_HOST_INSTALL_DEPENDENCIES:-"true"}
 WM_HOST_UPGRADE_PACKAGES=${WM_HOST_UPGRADE_PACKAGES:-"false"}
 
+WM_HOST_HOSTNAME=${WM_HOST_HOSTNAME:-"wm-evk"}
 WM_HOST_SSH_ENABLE_PASSWORD_LOGIN=${WM_HOST_SSH_ENABLE_PASSWORD_LOGIN:-"true"}
 WM_HOST_USER_NAME=${WM_HOST_USER_NAME:-"${USER}"}
 WM_HOST_USER_PASSWORD=${WM_HOST_USER_PASSWORD:-}
