--- a/environment/path.env
+++ b/environment/path.env
@@ -10,7 +10,7 @@ WM_CFG_SETTINGS_DEFAULT=${WM_CFG_SETTINGS_DEFAULT:-"${WM_CFG_INSTALL_PATH}/envir
 WM_CFG_SETTINGS_CUSTOM=${WM_CFG_SETTINGS_CUSTOM:-"${WM_CFG_SETTINGS_PATH}/custom.env"}
 WM_CFG_SESSION_STORAGE_PATH=${WM_CFG_SESSION_STORAGE_PATH:-"${WM_CFG_SETTINGS_PATH}/.session"}
 WM_CFG_GATEWAY_PATH="${WM_CFG_SETTINGS_PATH}/lxgw"
-WM_CFG_HOST_DEPENDENCIES_PATH=${WM_CFG_HOST_DEPENDENCIES_PATH:-"${WM_CFG_INSTALL_PATH}/host"}
+WM_CFG_HOST_DEPENDENCIES_PATH=${WM_CFG_HOST_DEPENDENCIES_PATH:-"${WM_CFG_INSTALL_PATH}/dependencies"}
 WM_CFG_UPDATE_PATH=${WM_CFG_UPDATE_PATH:-"${WM_CFG_INSTALL_PATH}/update"}
 WM_CFG_TEMPLATE_PATH=${WM_CFG_TEMPLATE_PATH:-"${WM_CFG_INSTALL_PATH}/templates"}
 WM_CFG_FRAMEWORK_DEBUG=${WM_CFG_FRAMEWORK_DEBUG:-"false"}
