Change default for sink enumeration (#51)
This commit sets the automatic sink enumeration to false.

The reason for this is to keep the gateway working if the
uart reboots and is enumerated by the host
with a different id.

In such situation, the containers will still attached to the
old device id, which will require an explicit call to
wm-config to sort it out.

Thus, we find it more stable to rely on the symbolic link
/dev/ttyWM, which should always point to the last inserted
device.

--- a/environment/custom.env
+++ b/environment/custom.env
@@ -31,3 +31,8 @@
 # WM_HOST_SET_HOSTNAME="wm-evk"
 # WM_HOST_SSH_ENABLE_NETWORK_LOGIN="true"
 
+# Set this to true if you want to use multiple sinks or handle discovery
+# dynamically.
+# The symbolic link /dev/ttyWM is used when set to false. The symbolic
+# link will match the last inserted device on the host.
+# WM_CONFIG_MULTI_SINK="true"
